# tuxmux

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: push-pull.yml
implant/: Cargo.toml  build.rs
implant-c/: .env  Dockerfile  Makefile  dns.h  implant  implant.c
implant-c++/: a.out  implant  implant.c
implant/src/: debug.rs  main.rs
server/: Cargo.toml
server/src/: server.rs
src/: client.rs  server.rs
src/client/: client.rs
src/server/: lib.rs  server.rs
victim/: Cargo.toml
victim/.cargo/: config.toml
victim/src/: dns.rs  dnstest.rs  hex.rs  main.rs
