cargo-features = ["panic-immediate-abort"]

[package]
name = "implant"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.11.0"
# simple-dns = { version = "0.11.2", default-features = false, features = ["alloc"] }
spinning_top = "0.3.0"
talc = "5.0.3"

[profile.dev]
panic = "immediate-abort"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "immediate-abort"
strip         = true
debug         = false 
overflow-checks = false

[profile.release.build-override]
opt-level = 3            # build scripts themselves can be fast