cargo-features = ["panic-immediate-abort"]

[package]
name = "implant"
version = "0.1.0"
edition = "2021"

[dependencies]
# spinning_top = "0.3.0"
# talc = "5.0.3"

[profile.dev]
panic = "abort"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
debug         = false 
overflow-checks = false

[workspace]