[package]
name = "tuxmux"
version = "0.1.0"
edition = "2021"

[dependencies]
dns-server = "0.2.6"
permit = "0.2.1"
rusqlite = { version = "0.39.0", default-features = false }
signal-hook = { version = "0.4", default-features = false, features = ["iterator"] }
tokio = { version = "1.50.0", default-features=false, features = ["rt", "rt-multi-thread", "fs",  "macros"] }
users = { version = "0.11.0", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets", "getrandom"] }

[profile.dev]
debug = false

[[bin]]
name = "server"
path = "src/server.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
